# color_analysis

./: .gitignore  25 Colour Analysis.py  Applied Image Slide.tif  H&E.tif  IT8 E130102.tif  README.md  Thumbs.db  app.py  app_test.py  flow.ipynb  other_cali.py  pyproject.toml  requirements.txt  test3.py  test4.py  test5.py
argyll/Argyll_V3.4.1/: log.txt
argyll/Argyll_V3.4.1/doc/: ArgyllDoc.html  Compiling.html  Environment.html  File_Formats.html  Installing_MSWindows.html  Scenarios.html  applycal.html  cal_format.html  ccxxmake.html  chartread.html  collink.html  colprof.html  colverify.html  dispcal.html  dispread.html  fakeread.html  iccgamut.html  instruments.html  invprofcheck.html  mpplu.html  printcal.html  printtarg.html  profcheck.html  refine.html  revfix.html  scanin.html  spec2cie.html  spotread.html  synthcal.html  targen.html  ti3_format.html  viewgam.html  xicclu.html
argyll/Argyll_V3.4.1/ref/: RefMediumGamut.gam  linear.cal  strange.cal
argyll/Argyll_V3.4.1/usb/: 45-Argyll.rules  55-Argyll.rules
src/: analyzer.py
src/calibration_analyzer/: CEL_GOG_Matrix_Conversion_1113.py  IT8_color_slide_analysis.py  analyzer.py
test_files/: E130102 40x Gamma zero point eight.tif  ICC_Profile.icm  IT8 Reference File E130102.txt
